<resources>
    <string name="app_name">Flowers Center</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FLOWERS CENTER</string>
    <string name="nav_header_subtitle">importaciones@flowerscenter.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Salir</string>

    <string name="menu_facturacion">Facturación</string>
    <string name="menu_home">Home</string>
    <string name="menu_grab_pedidos">Grabación de pedidos</string>
    <string name="menu_edic_clientes">Edicion de Clientes</string>
    <string name="menu_cambio_precio">Cambio de precio</string>
    <string name="menu_consultas">Consultas</string>
    <string name="menu_abonos_clientes">Abono de clientes</string>

</resources>
