<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_facturacion"
            android:icon="@drawable/facturacion"
            android:title="@string/menu_facturacion" />
        <item
            android:id="@+id/nav_grab_pedidos"
            android:icon="@drawable/grab_pedidos"
            android:title="@string/menu_grab_pedidos" />
        <item
            android:id="@+id/nav_edicion_de_clientes"
            android:icon="@drawable/edicion_clientes"
            android:title="@string/menu_edic_clientes" />
        <item
            android:id="@+id/nav_cambio_precios"
            android:icon="@drawable/cambio_precios"
            android:title="@string/menu_cambio_precio" />

    </group>

    <item android:title="Otras Opciones">
        <menu>
            <item
                android:id="@+id/nav_consultas"
                android:icon="@drawable/consultas"
                android:title="@string/menu_consultas" />
            <item
                android:id="@+id/nav_abonos_clientes"
                android:icon="@drawable/abonos_clientes"
                android:title="@string/menu_abonos_clientes" />
            <item
                android:id="@+id/nav_Acercade"
                android:icon="@drawable/info"
                android:title="Acerca de Nosotros" />
            <item
                android:id="@+id/nav_Salir"
                android:icon="@drawable/salir"
                android:title="Cerrar Sesión" />
        </menu>
    </item>

</menu>
