<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="App Flowers Center"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_facturacion"
        android:name="com.appflowers.fc.Fragmentos.Facturacion.Facturacion_Fragment"
        android:label="@string/menu_facturacion"
        tools:layout="@layout/fragment_facturacion" />

    <fragment
        android:id="@+id/nav_grab_pedidos"
        android:name="com.appflowers.fc.Fragmentos.Grab_Pedidos.Fragment_grab_pedidos"
        android:label="@string/menu_grab_pedidos"
        tools:layout="@layout/grab_pedidos_fragment" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.appflowers.fc.Fragmentos.Home.Home_Fragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_edicion_de_clientes"
        android:name="com.appflowers.fc.Fragmentos.Edicion_de_Clientes.Edicion_de_Clientes_Fragment"
        android:label="@string/menu_edic_clientes"
        tools:layout="@layout/fragment_edicion_clientes" />
    <fragment
        android:id="@+id/nav_cambio_precios"
        android:name="com.appflowers.fc.Fragmentos.Cambio_de_Precios.Cambio_de_Precios_Fragment"
        android:label="@string/menu_cambio_precio"
        tools:layout="@layout/fragment_cambio_precios" />

    <fragment
        android:id="@+id/nav_consultas"
        android:name="com.appflowers.fc.Fragmentos.Consultas.Consultas_Fragment"
        android:label="@string/menu_consultas"
        tools:layout="@layout/fragment_consultas" />

    <fragment
        android:id="@+id/nav_abonos_clientes"
        android:name="com.appflowers.fc.Fragmentos.Abono_de_Clientes.Abono_de_Clientes_Fragment"
        android:label="@string/menu_abonos_clientes"
        tools:layout="@layout/fragment_abonos_clientes" />
</navigation>